"Módulo completo de autenticación: AuthController, vistas, UserDetails, UserDetailsService y configuración de seguridad"