@@ -1,16 +1,17 @@
 package com.codepuppeteer.sistema_gastos_clientes.impl;
 
-import com.codepuppeteer.sistema_gastos_clientes.dto.usuario.*;
+import com.codepuppeteer.sistema_gastos_clientes.dto.usuario.UsuarioResponse;
+import com.codepuppeteer.sistema_gastos_clientes.dto.usuario.UsuarioSave;
+import com.codepuppeteer.sistema_gastos_clientes.dto.usuario.UsuarioUpdate;
 import com.codepuppeteer.sistema_gastos_clientes.entity.Usuario;
+import com.codepuppeteer.sistema_gastos_clientes.exception.RecursoNoEncontradoException;
 import com.codepuppeteer.sistema_gastos_clientes.repository.UsuarioRepository;
 import com.codepuppeteer.sistema_gastos_clientes.service.UsuarioService;
-
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -21,49 +22,73 @@ public class UsuarioServiceImpl implements UsuarioService {
 
     @Override
     public UsuarioResponse crear(UsuarioSave dto) {
-        Usuario usuario = Usuario.builder()
+
+        Usuario nuevo = Usuario.builder()
                 .username(dto.username())
                 .password(passwordEncoder.encode(dto.password()))
                 .rol(Usuario.Rol.valueOf(dto.rol()))
                 .activo(true)
                 .build();
 
-        usuarioRepository.save(usuario);
-        return new UsuarioResponse(usuario);
+        Usuario guardado = usuarioRepository.save(nuevo);
+
+        return convertirAResponse(guardado);
     }
 
     @Override
     public UsuarioResponse actualizar(Long id, UsuarioUpdate dto) {
-        Usuario usuario = usuarioRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Usuario no encontrado"));
 
-        usuario.setUsername(dto.username());
+        Usuario usuario = usuarioRepository.findById(id)
+                .orElseThrow(() -> new RecursoNoEncontradoException("Usuario no encontrado"));
+
         if (dto.password() != null && !dto.password().isBlank()) {
             usuario.setPassword(passwordEncoder.encode(dto.password()));
         }
-        usuario.setRol(Usuario.Rol.valueOf(dto.rol()));
+        if (dto.rol() != null) {
+            usuario.setRol(Usuario.Rol.valueOf(dto.rol()));
+        }
         usuario.setActivo(dto.activo());
 
-        usuarioRepository.save(usuario);
-        return new UsuarioResponse(usuario);
+        Usuario actualizado = usuarioRepository.save(usuario);
+
+        return convertirAResponse(actualizado);
     }
 
     @Override
     public List<UsuarioResponse> listar() {
-        return usuarioRepository.findAll().stream()
-                .map(UsuarioResponse::new)
-                .collect(Collectors.toList());
+        return usuarioRepository.findAll()
+                .stream()
+                .map(this::convertirAResponse)
+                .toList();
     }
 
     @Override
     public UsuarioResponse obtenerPorId(Long id) {
         Usuario usuario = usuarioRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Usuario no encontrado"));
-        return new UsuarioResponse(usuario);
+                .orElseThrow(() -> new RecursoNoEncontradoException("Usuario no encontrado"));
+        return convertirAResponse(usuario);
     }
 
     @Override
     public void eliminar(Long id) {
+        if (!usuarioRepository.existsById(id)) {
+            throw new RecursoNoEncontradoException("Usuario no encontrado");
+        }
         usuarioRepository.deleteById(id);
+    }
+
+    @Override
+    public Usuario obtenerPorUsername(String username) {
+        return usuarioRepository.findByUsername(username)
+                .orElseThrow(() -> new RecursoNoEncontradoException("Usuario no encontrado"));
+    }
+
+    private UsuarioResponse convertirAResponse(Usuario usuario) {
+        return new UsuarioResponse(
+                usuario.getId(),
+                usuario.getUsername(),
+                usuario.getRol().name(),
+                usuario.getActivo()
+        );
     }
 }
